--- a/index.html
+++ b/index.html
@@ -246,6 +246,28 @@
         .contact-section .btn:hover {
             background-color: #b00000;
         }
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+            background-color: #d00000;
+            color: #fff;
+            border: none;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            z-index: 1000;
+        }
+
+        .back-to-top:hover {
+            background-color: #b00000;
+        }
     </style>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
@@ -395,10 +417,33 @@
         </div>
         <button type="submit" class="btn btn-lg btn-block">Send Message</button>
     </form>
+
+     <!-- Back to Top Button -->
+     <button class="back-to-top" id="backToTop" onclick="scrollToTop()">
+        <i class="fas fa-arrow-up"></i>
+    </button>
     <div class="social-icons text-center mt-4">
         <a href="https://facebook.com" target="_blank" class="me-3"><i class="fab fa-facebook-f"></i></a>
         <a href="https://twitter.com" target="_blank" class="me-3"><i class="fab fa-twitter"></i></a>
         <a href="https://linkedin.com" target="_blank" class="me-3"><i class="fab fa-linkedin-in"></i></a>
     </div>
+
+    <script>
+        // Scroll to Top Button
+        const backToTopButton = document.getElementById('backToTop');
+
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 100) {
+                backToTopButton.style.display = 'flex';
+            } else {
+                backToTopButton.style.display = 'none';
+            }
+        });
+
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </div>
 </body>
